# habithings

./: .gitignore  README.md  daily_create_and_score.py  daily_create_and_score.sh  env  fake-results.json  habitica.py  pyproject.toml  tests.py
