[tool.poetry]
name = "things-habitica"
version = "0.1.0"
description = ""
authors = ["seulchankim <bartkim0426@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.13.3"

[tool.poetry.dev-dependencies]
ipython = "^7.15.0"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
